--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,7 +11,7 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Blog"
+  name = "A Doxology"
   pageRef = "posts"
   weight = 10
 
