feat: minor content changes

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -3,7 +3,7 @@
 # https://blowfish.page/docs/getting-started/
 
 theme = "blowfish"
-baseURL = "https://johncartergonzalez.dev"
+baseURL = "https://johncartergonzalez.codes"
 defaultContentLanguage = "en"
 
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
@@ -21,8 +21,7 @@ buildFuture = false
   anchor = 'Center'
 
 [taxonomies]
-  tag = "tags"
-  category = "categories"
+  topics = "topics"
   author = "authors"
   series = "series"
 
