--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -8,15 +8,15 @@ title = "A Digital Odyssey"
   isoCode = "en"
   rtl = false
   dateFormat = "2 January 2006"
-  # logo = "img/logo.png"
-  # secondaryLogo = "img/secondary-logo.png"
-  # description = "My awesome website"
-  # copyright = "Copy, _right?_ :thinking_face:"
+  logo = "img/logo.png"
+  secondaryLogo = "img/secondary-logo.png"
+  description = "My awesome website"
+  copyright = "Copy, _right?_ :thinking_face:"
 
 [author]
   name = "John Carter Gonzalez"
   image = "img/blowfish_logo.png"
-  headline = "I'm only human"
+  headline = "Digital Frontiersman, Developing a Hub for Insights & Discovery"
   bio = "Husband, Developer"
   links = [
      { email = "johncarter@gonzalez.codes" },
