--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,19 +11,20 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
+  name = "Topics"
+  pageRef = "topics"
+  weight = 10
+
+[[main]]
   name = "Blog"
   pageRef = "posts"
   weight = 10
 
 [[main]]
-  name = "Parent"
-  weight = 20
-
-[[main]]
-  name = "example sub-menu 1"
-  parent = "Parent"
-  pageRef = "posts"
-  weight = 20
+  name = "Github"
+  pre = "github"
+  url = "https://github.com/JohnCarterGonzalez"
+  weight = 30
 
 [[main]]
   name = "example sub-menu 2"
@@ -42,26 +43,10 @@
   pageRef = "categories/awesome"
   weight = 20
 
-[[main]]
-  name = "Categories"
-  pageRef = "categories"
-  weight = 20
-
-#[[main]]
-#  name = "Tags"
-#  pageRef = "tags"
-#  weight = 30
-
-
 # -- Footer Menu --
 # The footer menu is displayed at the bottom of the page, just before
 # the copyright notice. Configure as per the main menu above.
 
-
- [[footer]]
-   name = "Topics"
-   pageRef = "topics"
-   weight = 10
 
 # [[footer]]
 #   name = "Categories"
