update: version .8 of the tech blog, details need to be ironed out

--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -15,7 +15,7 @@ title = "A Doxology"
 
 [author]
   name = "John Carter Gonzalez"
-  image = "loom.png"
+  image = "images/loom.png"
   headline = "Digital Frontiersman, Developing a Hub for Insights & Discovery"
   bio = "Husband, Developer"
   links = [
