--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,23 +11,23 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "About"
-  pageRef = "about"
-  weight = 10
-
-[[main]]
   name = "Topics"
   pageRef = "topics"
   weight = 10
 
 [[main]]
-  name = "Blog"
-  pageRef = "posts"
+  name = "Pages"
+  pageRef = "pages"
   weight = 10
 
 [[main]]
   name = "Resume"
   pageRef = "resume"
+  weight = 10
+
+[[main]]
+  name = "About"
+  pageRef = "about"
   weight = 10
 
 # [[main]]
