ui: added more to the welcome post, remove Attrs

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -30,7 +30,7 @@ disableImageOptimization = true
 [footer]
   showMenu = true
   showCopyright = true
-  showThemeAttribution = true
+  showThemeAttribution = false
   showAppearanceSwitcher = true
   showScrollToTop = true
 
